# fluxperf

./: .gitignore  README.md  convert_longbench.py  convert_longbench_data.py  dual_round_benchmarker.py  flake.nix  fluxperf.py  llm_mocker.py  process_sharegpt.py  process_sharegpt_data.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.xdg-state/fnm_multishells/: 415592_1761706551327
docs/: ARCHITECTURE.md  ENV_VAR_TESTING.md  QUICK_START.md  RECIPE_GUIDE.md  TEST_COVERAGE.md  benchmarker_guide.md  converter_guide.md  multi_turn_pipeline.md
examples/: README.md  example_dataset.json  kvcache_reset_example.sh  recipe_dual_round.yaml  recipe_env_test.yaml  recipe_example.yaml  slo_example.yaml
fluxperf/: __init__.py  analyzer.py  cli.py  client.py  conversation.py  convert_longbench_data.py  loaders.py  models.py  process_sharegpt_data.py  prometheus_collector.py  runner.py  text_dataset_generator.py  tokenizer.py  vllm_manager.py
tests/: README.md  conftest.py  coverage_report.sh  run_all_tests.sh  test_benchmark_runner.py  test_conversation_history.py  test_dataclasses.py  test_env_variables.py  test_jsonl_output.py  test_llm_client.py  test_llm_mocker.py  test_module_integration.py  test_process_sharegpt.py  test_prometheus.py  test_recipe_env_integration.sh  test_tokenization_pipeline.py  test_tokenizer_tokens.py  test_utils.py  test_vllm_manager.py
